# lis2dw12-pid-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
scripts/: check_c_to_rust_parity.py
src/: error.rs  lib.rs  lis2dw12.rs  reg.rs  transport.rs
tests/: parity.rs
